log_output/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: pvc-100m
        - name: config
          configMap:
            name: log-output-conf

      containers:
        - name: log-output
          image: IMAGES/OUTPUT
          volumeMounts:
            - name: shared-data
              mountPath: /app/data

        - name: log-server
          image: IMAGES/SERVER
          volumeMounts:
            - name: shared-data
              mountPath: /app/data

            - name: config
              mountPath: /app/information.txt
              subPath: information.txt

          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3000
