log_output/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: log-output-svc
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 55555
      protocol: TCP
      targetPort: 3000
