log_output/manifests/routing.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  namespace: exercises
  name: my-gateway
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - kind: HTTPRoute

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  namespace: exercises
  name: log-output-route
spec:
  parentRefs:
    - name: my-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /pingpong
        - path:
            type: PathPrefix
            value: /pings
      backendRefs:
        - name: pingpong-svc
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: log-output-svc
          port: 80

    - matches:
        - headers:
            - name: host
              value: greeter-svc
      backendRefs:
        - name: greeter-svc-v1
          weight: 75
          port: 80
        - name: greeter-svc-v2
          weight: 25
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /wiki
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: wiki-svc
          port: 80
